--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,9 +105,9 @@ CurrentPosGridSize=1
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/Levels/terrain_test
-MRUItem1=/Game/Levels/BlockOut
-MRUItem2=/Game/Levels/assetlayout
+MRUItem0=/Game/Levels/assetlayout
+MRUItem1=/Game/Levels/terrain_test
+MRUItem2=/Game/Levels/BlockOut
 MRUItem3=/Game/Levels/Terrain-Test
 MRUItem4=/Game/Levels/test
 MRUItem5=/Game/Levels/Assetslayout
@@ -196,16 +196,16 @@ FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
-ContentBrowserTab1.ThumbnailSizeScale=0.180000
+ContentBrowserTab1.ThumbnailSizeScale=0.080000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Models/Dylan
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/Levels/assetlayout
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1280,7 +1280,7 @@ FbxImportUI.Mesh=True
 Brush.BrushSettings=True
 
 [RootWindow]
-ScreenPosition=X=356.000 Y=897.000
+ScreenPosition=X=-1407.000 Y=611.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2026,6 +2026,13 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Ben/gate.gate;
+RecentlyPlaced=/Game/Models/Ben/Pharaoahana.Pharaoahana;
+RecentlyPlaced=/Game/Models/Ben/shrine_unwrapped_ben_wilkinson_170119.shrine_unwrapped_ben_wilkinson_170119;
+RecentlyPlaced=/Game/Models/Jack/Bag_of_Food_1_Unwrapped.Bag_of_Food_1_Unwrapped;
+RecentlyPlaced=/Game/Models/Dylan/equipmentstationpart1.equipmentstationpart1;
+RecentlyPlaced=/Game/Models/Dylan/equipmentstationpart2.equipmentstationpart2;
+RecentlyPlaced=/Game/Models/Jack/Weapons_Rack.Weapons_Rack;
 RecentlyPlaced=/Game/Materials/Water.Water;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2039,13 +2046,6 @@ RecentlyPlaced=/Game/Models/Ben/small_cactus.small_cactus;
 RecentlyPlaced=/Game/Models/Ben/large_bush.large_bush;
 RecentlyPlaced=/Game/Models/David/LP_foliage.LP_foliage;
 RecentlyPlaced=/Game/Models/David/LP_Palm_tree.LP_Palm_tree;
-RecentlyPlaced=/Game/Models/David/LP_barrel.LP_barrel;
-RecentlyPlaced=/Game/Models/David/Material_005.Material_005;
-RecentlyPlaced=/Game/Models/David/Material_002.Material_002;
-RecentlyPlaced=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat.Palm_tree_UVChannel_1_color_Mat;
-RecentlyPlaced=/Game/Models/David/Palm_tree_UVChannel_1_color.Palm_tree_UVChannel_1_color;
-RecentlyPlaced=/Game/Models/Andrew/scaffold01-andrew-11-01-19.scaffold01-andrew-11-01-19;
-RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2198,26 +2198,26 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/terrain_test
-MRUItem1=/Game/Levels/BlockOut
-MRUItem2=/Game/Models/Ben/small_bush
-MRUItem3=/Game/Models/Ben/02_-_Default
-MRUItem4=/Game/Models/David/LP_foliage
-MRUItem5=/Game/Models/David/02_-_Default
-MRUItem6=/Game/Models/David/LP_Palm_tree
-MRUItem7=/Game/Models/David/crate-david-14-01-19
-MRUItem8=/Game/Models/David/LP_barrel
-MRUItem9=/Game/Models/David/Material_005
-MRUItem10=/Game/Models/David/Material_002
-MRUItem11=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat
-MRUItem12=/Game/Levels/assetlayout
-MRUItem13=/Game/Levels/test
-MRUItem14=/Game/Materials/white
-MRUItem15=/Game/Levels/Assetslayout
-MRUItem16=/Game/Models/Jack/Rock_Form_1
-MRUItem17=/Game/Models/Jack/Rock_Form_2
-MRUItem18=/Game/Models/Jack/Rock_Form_3
-MRUItem19=/Game/Models/David/diffuse
+MRUItem0=/Game/Models/Chris/Wheelbarrow2_-_Unwrapped_-_Chris_-_01-05-19
+MRUItem1=/Game/Levels/assetlayout
+MRUItem2=/Game/Levels/terrain_test
+MRUItem3=/Game/Levels/BlockOut
+MRUItem4=/Game/Models/Ben/small_bush
+MRUItem5=/Game/Models/Ben/02_-_Default
+MRUItem6=/Game/Models/David/LP_foliage
+MRUItem7=/Game/Models/David/02_-_Default
+MRUItem8=/Game/Models/David/LP_Palm_tree
+MRUItem9=/Game/Models/David/crate-david-14-01-19
+MRUItem10=/Game/Models/David/LP_barrel
+MRUItem11=/Game/Models/David/Material_005
+MRUItem12=/Game/Models/David/Material_002
+MRUItem13=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat
+MRUItem14=/Game/Levels/test
+MRUItem15=/Game/Materials/white
+MRUItem16=/Game/Levels/Assetslayout
+MRUItem17=/Game/Models/Jack/Rock_Form_1
+MRUItem18=/Game/Models/Jack/Rock_Form_2
+MRUItem19=/Game/Models/Jack/Rock_Form_3
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
