--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,9 +103,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/Levels/MechanicsLevel
-MRUItem2=/Game/Levels/TerrainMap
+MRUItem0=/Game/Levels/TerrainMap
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/MechanicsLevel
 MRUItem3=/Game/Levels/BlockOut
 
 [DetailCustomWidgetExpansion]
@@ -167,7 +167,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 SphereComponent=SphereComponent.Collision.Collision,
-TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -199,6 +199,7 @@ TextProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueC
 PlayerController=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Ability_Wheel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 RangeFinder_C=
+PostProcessComponent=PostProcessComponent.Color Grading.Color Grading|Misc,PostProcessComponent.Lens.Lens|Chromatic Aberration,PostProcessComponent.Lens.Lens|BloomAdvanced,PostProcessComponent.Lens.Lens|Bloom,PostProcessComponent.Lens.Lens|Dirt Mask,PostProcessComponent.Lens.Lens|Camera,PostProcessComponent.Lens.Lens|ExposureAdvanced,PostProcessComponent.Lens.Lens|Exposure,PostProcessComponent.Lens.Lens|Lens Flares,PostProcessComponent.Lens.Lens|Depth of FieldAdvanced,PostProcessComponent.Lens.Lens|Depth of Field,PostProcessComponent.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessComponent.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessComponent.Rendering Features.Rendering Features|Global Illumination,PostProcessComponent.Rendering Features.Rendering Features|Motion Blur,PostProcessComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessComponent.Rendering Features.Rendering Features|Light Propagation Volume,PostProcessComponent.Color Grading.Color Grading|WhiteBalance,PostProcessComponent.Color Grading.Color Grading|Global,PostProcessComponent.Color Grading.Color Grading|Shadows,PostProcessComponent.Color Grading.Color Grading|Midtones,PostProcessComponent.Color Grading.Color Grading|Highlights,PostProcessComponent.Rendering Features.Rendering Features|Screen Space Reflections,PostProcessComponent.Rendering Features.Rendering Features|Misc,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -225,18 +226,11 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/TerrainMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/HybridAttacker.HybridAttacker
-OpenAssetsAtExit=/Game/AIAgent/ProtoAI.ProtoAI
-OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI
-OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI
-OpenAssetsAtExit=/Game/AIAgent/BTService_BlueprintBase_New.BTService_BlueprintBase_New
-OpenAssetsAtExit=/Game/AIAgent/AttackPlayer.AttackPlayer
-OpenAssetsAtExit=/Game/AIAgent/Perception.Perception
-OpenAssetsAtExit=/Game/AIAgent/RangeFinder.RangeFinder
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2325,6 +2319,43 @@ RangedController_C.Controller=True
 RangedController_C.Replication=True
 RangedController_C.Input=True
 RangedController_C.Actor=True
+TopDownGameMode_C.TransformCommon=True
+PostProcessComponent.Variable=True
+PostProcessComponent.TransformCommon=True
+PostProcessComponent.Sockets=True
+PostProcessComponent.Color Grading=True
+PostProcessComponent.Film=True
+PostProcessComponent.Mobile Tonemapper=True
+PostProcessComponent.Lens=True
+PostProcessComponent.Rendering Features=True
+PostProcessComponent.PostProcessVolume=True
+PostProcessComponent.Rendering=True
+PostProcessComponent.Tags=True
+PostProcessComponent.ComponentReplication=True
+PostProcessComponent.Activation=True
+PostProcessComponent.Cooking=True
+PostProcessComponent.Events=True
+PostProcessComponent.Physics=True
+PostProcessComponent.Collision=True
+PostProcessComponent.LOD=True
+PostProcessComponent.AssetUserData=True
+TopDownCharacter_C.SkeletalMesh=True
+TopDownCharacter_C.Optimization=True
+TopDownCharacter_C.HLOD=True
+TopDownCharacter_C.Mobile=True
+TopDownCharacter_C.AssetUserData=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Input=True
+Landscape.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2385,12 +2416,12 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Settings.FilmWhitePoint\" \"Object.Settings.FilmShadowTint\" \"Object.Settings.FilmChannelMixerRed\" \"Object.Settings.FilmChannelMixerGreen\" \"Object.Settings.FilmChannelMixerBlue\" \"Object.Settings.SceneColorTint\" \"Object.Settings.Bloom1Tint\" \"Object.Settings.Bloom2Tint\" \"Object.Settings.Bloom3Tint\" \"Object.Settings.Bloom4Tint\" \"Object.Settings.Bloom5Tint\" \"Object.Settings.Bloom6Tint\" \"Object.Settings.BloomDirtMaskTint\" \"Object.Settings.AmbientCubemapTint\" \"Object.Settings.LensFlareTint\" \"Object.Settings.LensFlareTints\" \"Object.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.Settings.IndirectLightingColor\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Settings.FilmWhitePoint\" \"Object.Settings.FilmShadowTint\" \"Object.Settings.FilmChannelMixerRed\" \"Object.Settings.FilmChannelMixerGreen\" \"Object.Settings.FilmChannelMixerBlue\" \"Object.Settings.SceneColorTint\" \"Object.Settings.Bloom1Tint\" \"Object.Settings.Bloom2Tint\" \"Object.Settings.Bloom3Tint\" \"Object.Settings.Bloom4Tint\" \"Object.Settings.Bloom5Tint\" \"Object.Settings.Bloom6Tint\" \"Object.Settings.BloomDirtMaskTint\" \"Object.Settings.AmbientCubemapTint\" \"Object.Settings.LensFlareTint\" \"Object.Settings.LensFlareTints\" \"Object.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.Settings.IndirectLightingColor\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
+ActorComponent="\"Object.Settings.FilmWhitePoint\" \"Object.Settings.FilmShadowTint\" \"Object.Settings.FilmChannelMixerRed\" \"Object.Settings.FilmChannelMixerGreen\" \"Object.Settings.FilmChannelMixerBlue\" \"Object.Settings.SceneColorTint\" \"Object.Settings.Bloom1Tint\" \"Object.Settings.Bloom2Tint\" \"Object.Settings.Bloom3Tint\" \"Object.Settings.Bloom4Tint\" \"Object.Settings.Bloom5Tint\" \"Object.Settings.Bloom6Tint\" \"Object.Settings.BloomDirtMaskTint\" \"Object.Settings.AmbientCubemapTint\" \"Object.Settings.LensFlareTint\" \"Object.Settings.LensFlareTints\" \"Object.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.Settings.IndirectLightingColor\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2398,8 +2429,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character=
-Pawn=
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2413,7 +2444,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
+TopDownCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2459,12 +2490,13 @@ Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
-BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
-BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
-AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI"
+BehaviorTreeGraphNode="\"Object.AI.AI"
+AIGraphNode="\"Object.AI.AI"
+EdGraphNode="\"Object.AI.AI"
 RangeFinder_C=
 RangedController_C="\"Object.Default.DebugColour\" "
+PostProcessComponent="\"Object.Settings.FilmWhitePoint\" \"Object.Settings.FilmShadowTint\" \"Object.Settings.FilmChannelMixerRed\" \"Object.Settings.FilmChannelMixerGreen\" \"Object.Settings.FilmChannelMixerBlue\" \"Object.Settings.SceneColorTint\" \"Object.Settings.Bloom1Tint\" \"Object.Settings.Bloom2Tint\" \"Object.Settings.Bloom3Tint\" \"Object.Settings.Bloom4Tint\" \"Object.Settings.Bloom5Tint\" \"Object.Settings.Bloom6Tint\" \"Object.Settings.BloomDirtMaskTint\" \"Object.Settings.AmbientCubemapTint\" \"Object.Settings.LensFlareTint\" \"Object.Settings.LensFlareTints\" \"Object.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.Settings.IndirectLightingColor\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2490,7 +2522,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/t015548h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3207,7 +3239,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -3284,26 +3316,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/BTService_BlueprintBase_New
-MRUItem1=/Game/AIAgent/HybridAttacker
-MRUItem2=/Game/AIAgent/Proto_controller
-MRUItem3=/Game/AIAgent/AIController_I
-MRUItem4=/Game/AIAgent/RangedController
-MRUItem5=/Game/AIAgent/RangeFinder
-MRUItem6=/Game/AIAgent/Perception
-MRUItem7=/Game/AIAgent/AttackPlayer
-MRUItem8=/Game/AIAgent/HybridController
-MRUItem9=/Game/AIAgent/DerivedClasses/HybridAI
-MRUItem10=/Game/Models/Shannon/body_WIP
-MRUItem11=/Game/AIAgent/DerivedClasses/RangedAI
-MRUItem12=/Game/AIAgent/RangedTree
-MRUItem13=/Game/Widgets/Ability_Wheel
-MRUItem14=/Game/Chloe/UI/HUD_Proto
-MRUItem15=/Game/Levels/MechanicsLevel
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem17=/Game/AIAgent/AIbot
-MRUItem18=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem19=/Game/SpawnActor/SpawnPoint
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/Levels/TerrainMap
+MRUItem2=/Game/AIAgent/BTService_BlueprintBase_New
+MRUItem3=/Game/AIAgent/HybridAttacker
+MRUItem4=/Game/AIAgent/Proto_controller
+MRUItem5=/Game/AIAgent/AIController_I
+MRUItem6=/Game/AIAgent/RangedController
+MRUItem7=/Game/AIAgent/RangeFinder
+MRUItem8=/Game/AIAgent/Perception
+MRUItem9=/Game/AIAgent/AttackPlayer
+MRUItem10=/Game/AIAgent/HybridController
+MRUItem11=/Game/AIAgent/DerivedClasses/HybridAI
+MRUItem12=/Game/Models/Shannon/body_WIP
+MRUItem13=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem14=/Game/AIAgent/RangedTree
+MRUItem15=/Game/Widgets/Ability_Wheel
+MRUItem16=/Game/Chloe/UI/HUD_Proto
+MRUItem17=/Game/Levels/MechanicsLevel
+MRUItem18=/Game/AIAgent/AIbot
+MRUItem19=/Game/TopDownBP/Blueprints/TopDownGameMode
 
 [WidgetTemplatesExpanded]
 Extra=False
