--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -235,13 +235,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct/Structs
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
 LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned.TopDownCharacterCleaned
 OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
 OpenAssetsAtExit=/Game/Chloe/UI/I_InventoryInterface.I_InventoryInterface
