--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -177,8 +177,8 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-BoolProperty=
+StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 ArrayProperty=
 IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -204,6 +204,9 @@ RangeFinder_C=
 Button=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 PlayerControl_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+CoolDownComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -227,13 +230,14 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2354,6 +2358,63 @@ Start_Menu_C.Behavior=True
 Start_Menu_C.Render Transform=True
 Start_Menu_C.Clipping=True
 Start_Menu_C.Navigation=True
+CoolDownComponent_C.ComponentTick=True
+CoolDownComponent_C.Tags=True
+CoolDownComponent_C.ComponentReplication=True
+CoolDownComponent_C.Activation=True
+CoolDownComponent_C.Variable=True
+CoolDownComponent_C.Cooking=True
+CoolDownComponent_C.Sockets=True
+CoolDownComponent_C.Default=True
+CoolDownComponent_C.Events=True
+BTDecorator_Cooldown.FlowControl=True
+BTDecorator_Cooldown.Decorator=True
+BTDecorator_Cooldown.Description=True
+Baseprojectile_C.Tick=True
+Baseprojectile_C.Rendering=True
+Baseprojectile_C.Replication=True
+Baseprojectile_C.Input=True
+Baseprojectile_C.Actor=True
+BaseAI_C.Default=True
+BaseAI_C.Tick=True
+BaseAI_C.Character=True
+BaseAI_C.Camera=True
+BaseAI_C.Pawn=True
+BaseAI_C.Rendering=True
+BaseAI_C.Replication=True
+BaseAI_C.Input=True
+BaseAI_C.Actor=True
+BaseAI_C.TransformCommon=True
+BaseAI_C.Animation=True
+BaseAI_C.Mesh=True
+BaseAI_C.Physics=True
+BaseAI_C.Clothing=True
+BaseAI_C.Collision=True
+BaseAI_C.Lighting=True
+BaseAI_C.ClothingSimulation=True
+BaseAI_C.Tags=True
+BaseAI_C.Activation=True
+BaseAI_C.Cooking=True
+BaseAI_C.Character Movement: Jumping / Falling=True
+BaseAI_C.Character Movement (General Settings)=True
+BaseAI_C.Character Movement: Walking=True
+BaseAI_C.Character Movement: Swimming=True
+BaseAI_C.Character Movement: Flying=True
+BaseAI_C.Character Movement: Custom Movement=True
+BaseAI_C.Character Movement (Rotation Settings)=True
+BaseAI_C.Character Movement: Physics Interaction=True
+BaseAI_C.Character Movement (Networking)=True
+BaseAI_C.Character Movement=True
+BaseAI_C.Character Movement: Avoidance=True
+BaseAI_C.Character Movement: NavMesh Movement=True
+BaseAI_C.RootMotion=True
+BaseAI_C.NavMovement=True
+BaseAI_C.Velocity=True
+BaseAI_C.PlanarMovement=True
+BaseAI_C.MovementComponent=True
+BaseAI_C.Shape=True
+BaseAI_C.Navigation=True
+BaseAI_C.Materials=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2413,18 +2474,25 @@ Start_Menu_C.Navigation=True
 /Game/Chloe/UI/Settings_Menu.Settings_Menu=0
 /Game/TopDownBP/Blueprints/MainMenuPawn.MainMenuPawn=0
 /Game/TopDownBP/Blueprints/PlayerControl.PlayerControl=0
+/Game/AIAgent/Baseprojectile.Baseprojectile=0
+/Game/AIAgent/RangeFinder.RangeFinder=0
+/Game/AIAgent/AttackPlayer.AttackPlayer=0
+/Game/AIAgent/DerivedClasses/RangedAI.RangedAI=0
+/Game/TopDownBP/Blueprints/ICoolDown.ICoolDown=0
+/Game/AIAgent/BaseAI.BaseAI=0
+/Game/TopDownBP/Blueprints/CoolDownComponent.CoolDownComponent=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2445,9 +2513,9 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
-Controller=
+Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.PlayerCurrentlyDashing\" \"Object.PlayerCurrentlyDashing\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2466,8 +2534,8 @@ REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Mo
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[16]\" "
 BaseWeapon_C=
 TestPawn3_C=
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2493,15 +2561,18 @@ Ability_Wheel_C="\"Object.Player Ref\" \"Object.Player Ref\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
-BehaviorTreeGraphNode_Root="\"Object.AI.AI"
-BehaviorTreeGraphNode="\"Object.AI.AI"
-AIGraphNode="\"Object.AI.AI"
+BehaviorTreeGraphNode_Root=
+BehaviorTreeGraphNode=
+AIGraphNode=
 EdGraphNode=
 RangeFinder_C=
 RangedController_C="\"Object.Default.DebugColour\" "
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+CoolDownComponent_C=
+RangedAI_C=
+BaseAI_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3251,6 +3322,7 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/AIAgent/BaseAI.BaseAI;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
 RecentlyPlaced=/Game/Models/Shannon/body_WIP.body_WIP;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/Teleport.Teleport;
@@ -3270,7 +3342,6 @@ RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop;
 RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
 RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
-RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3321,26 +3392,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem3=/Game/Chloe/UI/Start_Menu
-MRUItem4=/Game/Chloe/UI/Settings_Menu
-MRUItem5=/Game/TopDownBP/Blueprints/MainMenuPawn
-MRUItem6=/Game/Chloe/UI/Pause_Menu
-MRUItem7=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem9=/Game/Chloe/UI/HUD_Proto
-MRUItem10=/Game/Widgets/Ability_Wheel
-MRUItem11=/Game/Levels/MechanicsLevel
-MRUItem12=/Game/AIAgent/BTService_BlueprintBase_New
-MRUItem13=/Game/AIAgent/HybridAttacker
-MRUItem14=/Game/AIAgent/Proto_controller
-MRUItem15=/Game/AIAgent/AIController_I
-MRUItem16=/Game/AIAgent/RangedController
-MRUItem17=/Game/AIAgent/RangeFinder
-MRUItem18=/Game/AIAgent/Perception
-MRUItem19=/Game/AIAgent/AttackPlayer
+MRUItem0=/Game/AIAgent/BaseAI
+MRUItem1=/Game/AIAgent/I_Damage
+MRUItem2=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem3=/Game/AIAgent/RangeFinder
+MRUItem4=/Game/AIAgent/TargetInterface
+MRUItem5=/Game/AIAgent/Baseprojectile
+MRUItem6=/Game/AIAgent/RangedController
+MRUItem7=/Game/AIAgent/AttackPlayer
+MRUItem8=/Game/AIAgent/RangedTree
+MRUItem9=/Game/TopDownBP/Blueprints/ICoolDown
+MRUItem10=/Game/TopDownBP/Blueprints/CoolDownComponent
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem12=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem13=/Game/TopDownBP/Blueprints/MainMenuPawn
+MRUItem14=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem15=/Game/Levels/MainMenu
+MRUItem16=/Game/Chloe/UI/Main_Menu_level/Main_Menu
+MRUItem17=/Game/Chloe/UI/Start_Menu
+MRUItem18=/Game/Chloe/UI/Settings_Menu
+MRUItem19=/Game/Chloe/UI/Pause_Menu
 
 [WidgetTemplatesExpanded]
 Extra=False
